--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <img src="./images/logo.png" alt="Capelo e diploma">
             <h1>Calculadora de médias</h1>
         </header>
-            <form>
-                <input type="text" required placeholder="Nome da atividade">
-                <input type="number" required placeholder="Nota da atividade" min="0" max="10">
+            <form id="form-atividade">
+                <input type="text" id="nome-atividade" required placeholder="Nome da atividade">
+                <input type="number" id="nota-atividade" required placeholder="Nota da atividade" min="0" max="10">
                 <button type="submit"> Adcionar +</button>
             </form>
             <!-- Propriedade cellspacing usada para remover o separador de coluna das tabelas -->
@@ -35,11 +35,13 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <!-- Conteúdo adcionado no código apenas para fins de estilização na tabela, com a lógica implementada, 
+                ele será substituído por dados fornecidos pelo usuário.-->
+                <!-- <tr>
                     <td>Atividade 1</td>
                     <td>7</td>
                     <td><img src="./images/aprovado.png" alt="Emoji festejando"></td>
-                </tr>
+                </tr> -->
             </tbody>
             <tfoot>
                 <tr>
@@ -50,6 +52,7 @@
             </tfoot>
         </table>
     </div>
+    <script src="./main.js"></script>
 </body>
 
 </html>
